log
Tue 07 May 2024 02:49:34 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  1|8
total_score: 0/70
93d2566
Tue 07 May 2024 02:49:53 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
c1d4ae4
Tue 07 May 2024 02:54:18 PM UTC: 
 treemap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
f862249
Tue 07 May 2024 02:57:18 PM UTC: 
 treemap.c | 24 ++++++++++++++++++++++++
 1 file changed, 24 insertions(+)
 tests:  12|6
total_score: 15/70
15791ce
Tue 07 May 2024 03:30:53 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  12|6
total_score: 15/70
60bd283
Tue 07 May 2024 03:36:16 PM UTC: 
 treemap.c | 33 +++++++++++++++++++++++++++++++++
 1 file changed, 33 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:108:24: error: variable ‘child’ set but not used [-Werror=unused-but-set-variable]
  108 |             TreeNode * child;
      |                        ^~~~~
cc1: all warnings being treated as errors
Compilation failed
95dbfb2
Tue 07 May 2024 03:40:58 PM UTC: 
 treemap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  13|6
total_score: 20/70
70b9852
Tue 07 May 2024 03:41:42 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  13|6
total_score: 20/70
13dd96b
Tue 07 May 2024 03:53:31 PM UTC: 
 treemap.c | 86 +++++++++++++++++----------------------------------------------
 1 file changed, 23 insertions(+), 63 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:49:62: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   49 |     if (tree == NULL || key == NULL || value == NULL) return NULL;
      |                                                              ^~~~
treemap.c:48:6: note: declared here
   48 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7a1b26b
